add seperate js file, remove in-HTML js

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     </style>
 </head>
 <body>
-    <script>
-        console.log("hellow world!!!!");
-    </Script>
+    <script src = "logic.js"></Script>
 </body>
 </html>
